# oscillator

./: .gitignore  README.md
.github/workflows/: sync.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_sync_state.py  0003_materialized_views.py  0004_anomalies_digests.py  0005_time_entries.py  0006_custom_issues.py
backend/app/: __init__.py  config.py  db.py  db_partitions.py  main.py
backend/app/api/: __init__.py  custom_issues.py  deps.py  insights.py  time_tracking.py
backend/app/jobs/: __init__.py  sync.py
backend/app/linear/: __init__.py  client.py
backend/app/models/: __init__.py  base.py  core.py  events.py  insights.py  issues.py
backend/app/schemas/: __init__.py  custom_issues.py  insights.py  time_tracking.py
backend/app/services/: __init__.py  anomaly.py  digest.py  normalizer.py
backend/tests/: test_health.py
frontend/: .env.example  globals.d.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/custom-issues/[...path]/: route.ts
frontend/app/api/insights/[...path]/: route.ts
frontend/app/api/time/[...path]/: route.ts
frontend/app/issues/: page.tsx
frontend/app/people/: page.tsx
frontend/app/squad/: page.tsx
frontend/app/teams/: page.tsx
frontend/app/time/: page.tsx
frontend/app/trends/: page.tsx
frontend/components/: charts.tsx  date-scrubber.tsx  digest.tsx  fut.tsx  game.tsx  segmented.tsx  shell.tsx  ui.tsx
frontend/lib/: api.ts  dates.ts  fut.ts  game.ts  types.ts
