[project]
name = "linear-dashboard-backend"
version = "0.1.0"
description = "Linear Team Activity Dashboard — FastAPI backend (ingest + insights)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # --- Web framework ---
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    # --- Config / validation ---
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    # --- Database (async) ---
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "greenlet>=3.0",          # required by SQLAlchemy async
    # --- Linear GraphQL client ---
    "httpx>=0.27,<1.0",
    "tenacity>=8.4,<9.0",     # retry/backoff for rate limits
    # --- Scheduling ---
    "apscheduler>=3.10,<4.0",
    # --- Misc ---
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",            # ASGI test client
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI uses Depends()/Query() as argument defaults by design.
"app/api/*.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
